--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <h2 class="text-center text-uppercase font-weight-bold mt-0">College</h2>
             <img class="factoid" src="assets/img/ROIc.jpg">
             <img class="factoid2" src="assets/img/costc.jpg">
-            <img class="factoid3" src="assets/img/debtc.jpg">
+            <img class="factoid3" src="assets/img/Debtc.jpg">
             <img class="factoid4" src="assets/img/salaryc.jpg">
             <img class="factoid5" src="assets/img/earningsc.jpg">
             <img class="factoid6" src="assets/img/savedc.jpg">
