--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
               </div>
             </div>
           </div>
+          <br>
           <p class="text-blac mb-4">See why <b>Mark Mazgan</b> - who lost everything in the housing crash of 2008 - decided to go back to school and become a member of the trades. Today, Mark owns <b>Mazgan Air Conditioning and Heating Repair</b>, a
             thriving HVAC
             business out of New York.
@@ -106,11 +107,10 @@
           <figure class="image-1">
             <img class="image-fig" src="assets/img/image06.png">
             <br>
-            <br>
             <h2 class="text-center text-uppercase font-weight-bold mt-0">College</h2>
             <img class="factoid" src="assets/img/ROIc.jpg">
             <img class="factoid2" src="assets/img/costc.jpg">
-            <img class="factoid3" src="assets/img/Debtc.jpg">
+            <img class="factoid3" src="assets/img/debtc.jpg">
             <img class="factoid4" src="assets/img/salaryc.jpg">
             <img class="factoid5" src="assets/img/earningsc.jpg">
             <img class="factoid6" src="assets/img/savedc.jpg">
@@ -120,7 +120,6 @@
         <div class="image-wrapper column col-lg-6">
           <figure class="image-2">
             <img class="image-fig" src="assets/img/image05.png">
-            <br>
             <br>
             <h2 class="text-center text-uppercase font-weight-bold mt-0">Trade School</h2>
             <img class="factoid" src="assets/img/ROIt.jpg">
